Updated github and site link addresses for the poke-api, fixed word wrapping on email

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -53,6 +53,7 @@
 .email{
   color: white; 
   text-decoration: none;
+  word-wrap: break-word;
 }
 
 @media(max-width: 970px){
